# level-4-project

./: README.md  game_of_life.ipynb  game_of_life_models.ipynb  pyproject.toml
cellular_automata/: game_of_life.py
common/: __init__.py  utils.py  visualization.py
tests/: test_game_of_life.py
