[project]
name = "level-4-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "torch==2.4.1",
    "torchvision==0.19.1",
]
